Updates to HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Santiago Aguirre</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/aos.css">
-    <link rel="stylesheet" href="./assets/css/line-awesome.min.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -36,9 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Skills</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#about">Resume</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -76,7 +76,7 @@
                         </p>
                         <div data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
-                            <a href="#" class="link-custom">Send me a message at santiaguirregdc@gmail.com</a>
+                            <a href="mailto:santiaguirregdc@gmail.com" class="link-custom">Send me a message at santiaguirregdc@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -163,6 +163,27 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+                        <div class="card-custom rounded-4 bg-base shadow-effect">
+                            <div class="card-custom-image rounded-4">
+                                <img class="rounded-4"
+                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1690304478/YahooSearch_ecwx8k.png"
+                                    alt="">
+                            </div>
+                            <div class="card-custom-content p-4">
+                                <h4>Yahoo Search</h4>
+                                <p>If Yahoo had won the search engine battle . . .</p>
+                                <p>A re-design of the current Google Search website with Yahoo elements.</p>
+                                <p>Front-end website made with HTML, CSS, and Bootstrap</p>
+                                <a href="https://codepen.io/desert-dev/pen/jOZeQaY" class="link-custom">Open Codepen</a>
+                                <p></p>
+                                <a href="https://github.com/santidevhmo/Yahoo-Search" class="link-custom">Open Github</a>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
 
             </div>
@@ -189,7 +210,6 @@
                             </div>
                             <h5 class="mt-4 mb-2">Mobile & Web UX/UI Design</h5>
                             <p>2+ years of experience creating user-centric designs for mobile and web applications</p>
-                            <a href="#" class="link-custom">Read More</a>
                         </div>
                     </div>
 
@@ -201,7 +221,6 @@
                             <h5 class="mt-4 mb-2">Graphic Design</h5>
                             <p>3+ years of experience in graphic design work, blending creativity and strategic thinking
                                 to deliver visually captivating designs.</p>
-                            <a href="#" class="link-custom">Read More</a>
                         </div>
                     </div>
 
@@ -213,7 +232,6 @@
                             <h5 class="mt-4 mb-2">iOS Development</h5>
                             <p>2+ years of experience developing and publishing iOS applications, including an
                                 internship.</p>
-                            <a href="#" class="link-custom">Read More</a>
                         </div>
                     </div>
 
@@ -226,7 +244,6 @@
                             <p>Proficient in front-end technologies such as HTML, CSS, and JavaScript to create
                                 interactive and responsive web interfaces using version control systems like Git to
                                 manage and track changes</p>
-                            <a href="#" class="link-custom">Read More</a>
                         </div>
                     </div>
 
@@ -238,7 +255,6 @@
                             <h5 class="mt-4 mb-2">Video Editing</h5>
                             <p>3+ years of experience developing in-depth knowledge and proficiency in Adobe Premiere
                                 Pro through dedicated practice and a genuine passion for video editing.</p>
-                            <a href="#" class="link-custom">Read More</a>
                         </div>
                     </div>
 
@@ -251,7 +267,6 @@
                             <p>Worked on 3+ organizations as a Marketing Strategist, leveraging my expertise in crafting
                                 effective marketing campaigns and strategies while gaining valuable experience in
                                 diverse environments.</p>
-                            <a href="#" class="link-custom">Read More</a>
                         </div>
                     </div>
 
@@ -262,7 +277,7 @@
         <!-- SERVICES -->
 
         <!-- ABOUT -->
-        <section id="about" class="smaller-height px-lg-5">
+        <!-- <section id="about" class="smaller-height px-lg-5">
             <div class="container">
 
                 <div class="row pb-4" data-aos="fade-up">
@@ -273,219 +288,25 @@
                 </div>
 
                 <div class="row gy-5">
+
                     <div class="col-lg-6">
 
                         <div class="form-group col-12 d-grid">
                             <button type="submit" class="btn btn-brand">Open Resume</button>
                         </div>
-                        <!-- 
-                        <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Education</h3>
-                        <div class="row gy-4">
-
-                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                                <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Bachelor of Science in Digital Business Transformation</h4>
-                                    <p class="text-brand mb-2">
-                                        Instituto Tecnológico de Monterrey (2020 - 2024)
-                                    </p>
-                                    <a href="https://tec.mx/es/computacion-y-tecnologias-de-informacion/ingeniero-en-transformacion-digital-de-negocios" class="link-custom">
-                                        Learn more about this degree
-                                    </a>
-                                </div>
-                            </div>
-
-                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                                <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>International Experience in Uppsala, Sweden</h4>
-                                    <p class="text-brand mb-2">Uppsala University (2023 - 2024)</p>
-                                    <a href="https://www.topuniversities.com/universities/uppsala-university" class="link-custom">
-                                        Ranked #105 in the world by QS World University Rankings
-                                    </a>
-                                </div>
-                            </div>
-
-                        </div> -->
 
                     </div>
-
-                    <!-- <div class="col-lg-6">
-
-                        <h3 class="mb-4" data-aos="fade-up" data-aos-delay="300">Experience</h3>
-                        <div class="row gy-4">
-
-                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                                <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Digital Transformation Consultant & Developer</h4>
-                                    <p class="text-brand mb-2">Recinsa (2023 - Present)</p>
-                                    <p class="mb-0">Developed their current website and updating their current technologies</p>
-                                </div>
-                            </div>
-
-                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                                <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>iOS Developer</h4>
-                                    <p class="text-brand mb-2">Teknol (2020 - 2021)</p>
-                                    <p class="mb-0">Worked on the development of a Learning Management System iOS App with Swift, SwiftUI, Xcode and Firebase.</p>
-                                </div>
-                            </div>
-
-                            <div class="col-12" data-aos="fade-up" data-aos-delay="600">
-                                <div class="bg-base p-4 rounded-4 shadow-effect">
-                                    <h4>Applications developer</h4>
-                                    <p class="text-brand mb-2">Twitter (2018 - 2020)</p>
-                                    <p class="mb-0">All we are more and design lorem ipsum dolor creativity sit amet consectetur adipisicing elit</p>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div> -->
 
                 </div>
-        </section>
+        </section> -->
         <!-- //ABOUT -->
-
-        <!-- REVIEWS -->
-        <!-- <section id="reviews" class="full-height px-lg-5">
-            <div class="container">
-
-                <div class="row pb-4" data-aos="fade-up">
-                    <div class="col-lg-8">
-                        <h6 class="text-brand">REVIEWS</h6>
-                        <h1>What our subscribers say</h1>
-                    </div>
-                </div>
-
-                <div class="row gy-4">
-
-                    <div class="col-md-4" data-aos="fade-up">
-
-                        <div class="review shadow-effect bg-base p-4 rounded-4">
-                            <div class="text-brand h5">
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                            </div>
-                            <p class="my-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel quae facilis fugiat molestias ab illum excepturi, qui optio modi asperiores, delectus maiores!</p>
-                            <div class="person">
-                                <h5 class="mb-0">Jon Doe</h5>
-                                <p class="mb-0">Twitter</p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-
-                        <div class="review shadow-effect bg-base p-4 rounded-4">
-                            <div class="text-brand h5">
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                            </div>
-                            <p class="my-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel quae facilis fugiat molestias ab illum excepturi, qui optio modi asperiores, delectus maiores!</p>
-                            <div class="person">
-                                <h5 class="mb-0">Jon Doe</h5>
-                                <p class="mb-0">Twitter</p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
-
-                        <div class="review shadow-effect bg-base p-4 rounded-4">
-                            <div class="text-brand h5">
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                                <i class="las la-star"></i>
-                            </div>
-                            <p class="my-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel quae facilis fugiat molestias ab illum excepturi, qui optio modi asperiores, delectus maiores!</p>
-                            <div class="person">
-                                <h5 class="mb-0">Jon Doe</h5>
-                                <p class="mb-0">Twitter</p>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-        </section> -->
-        <!-- //REVIEWS -->
-
-        <!-- BLOG -->
-        <!-- <section id="blog" class="full-height px-lg-5">
-            <div class="container">
-
-                <div class="row pb-4" data-aos="fade-up">
-                    <div class="col-lg-8">
-                        <h6 class="text-brand">BLOG</h6>
-                        <h1>My BLog Posts</h1>
-                    </div>
-                </div>
-
-                <div class="row gy-4">
-
-                    <div class="col-md-4" data-aos="fade-up">
-                        <div class="card-custom rounded-4 bg-base shadow-effect">
-                            <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/blog-post-1.jpg" alt="">
-                            </div>
-                            <div class="card-custom-content p-4">
-                                <p class="text-brand mb-2">20 Dec, 2022</p>
-                                <h5 class="mb-4">Design a creative landing page using Bootstrap 5</h5>
-                                <a href="#" class="link-custom">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
-                        <div class="card-custom rounded-4 bg-base shadow-effect">
-                            <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/blog-post-2.jpg" alt="">
-                            </div>
-                            <div class="card-custom-content p-4">
-                                <p class="text-brand mb-2">20 Dec, 2022</p>
-                                <h5 class="mb-4">Design a creative landing page using Bootstrap 5</h5>
-                                <a href="#" class="link-custom">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
-                        <div class="card-custom rounded-4 bg-base shadow-effect">
-                            <div class="card-custom-image rounded-4">
-                                <img class="rounded-4" src="./assets/images/blog-post-3.jpg" alt="">
-                            </div>
-                            <div class="card-custom-content p-4">
-                                <p class="text-brand mb-2">20 Dec, 2022</p>
-                                <h5 class="mb-4">Design a creative landing page using Bootstrap 5</h5>
-                                <a href="#" class="link-custom">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-            </div>
-        </section> -->
-        <!-- //BLOG -->
 
         <!-- CONTACT -->
         <section id="contact" class="smaller-height px-lg-5">
             <div class="container">
 
                 <div class="row justify-content-center text-center">
+
                     <div class="col-lg-8 pb-4" data-aos="fade-up">
                         <h6 class="text-brand">CONTACT</h6>
                         <h1>Interested in working together? Let's talk
@@ -495,30 +316,10 @@
                     <h5 class="mt-4 mb-2">E-mail</h5>
                     <p>santiaguirregdc@gmail.com</p>
 
-                    <!-- <div class="col-lg-8" data-aos="fade-up" data-aos-delay="300">
-                        <form action="#" class="row g-lg-3 gy-3">
-                            <div class="form-group col-md-6">
-                                <input type="text" class="form-control" placeholder="Enter your name">
-                            </div>
-                            <div class="form-group col-md-6">
-                                <input type="email" class="form-control" placeholder="Enter your email">
-                            </div>
-                            <div class="form-group col-12">
-                                <input type="text" class="form-control" placeholder="Enter subject">
-                            </div>
-                            <div class="form-group col-12">
-                                <textarea name="" rows="4" class="form-control"
-                                    placeholder="Enter your message"></textarea>
-                            </div>
-                            <div class="form-group col-12 d-grid">
-                                <button type="submit" class="btn btn-brand">Contact me</button>
-                            </div>
-                        </form>
-                    </div>
-                </div> -->
+                    <h5 class="mt-4 mb-2">LinkedIn</h5>
+                    <a href="https://www.linkedin.com/in/santiagoagdc/" class="">Send me a message</a>
 
-
-            </div>
+                </div>
         </section>
         <!-- //CONTACT -->
 
