Added to-do list project

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="card-custom-content p-4">
                                 <h4>VAK Test</h4>
                                 <p>iOS App with a 12 question quiz to learn your dominant learning style: Visual,
-                                    Auditory or Kinesthetic</p>
+                                    Auditory or Kinesthetic.</p>
                                 <a href="https://www.linkedin.com/feed/update/urn:li:activity:6761327666755891200/"
                                     class="link-custom">See LinkedIn post</a>
                             </div>
@@ -178,17 +178,36 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
-                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1690304478/YahooSearch_ecwx8k.png"
+                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1690415160/YahooSearchPoster_nkqlrp.png"
                                     alt="">
                             </div>
                             <div class="card-custom-content p-4">
                                 <h4>Yahoo Search</h4>
                                 <p>If Yahoo had won the search engine battle . . .</p>
                                 <p>A re-design of the current Google Search website with Yahoo elements.</p>
-                                <p>Front-end website made with HTML, CSS, and Bootstrap</p>
                                 <a href="https://codepen.io/desert-dev/pen/jOZeQaY" class="link-custom">Open Codepen</a>
                                 <p></p>
                                 <a href="https://github.com/santidevhmo/Yahoo-Search" class="link-custom">Open Github</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+                        <div class="card-custom rounded-4 bg-base shadow-effect">
+                            <div class="card-custom-image rounded-4">
+                                <img class="rounded-4"
+                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1690415170/ToDoListPoster_y451ym.png"
+                                    alt="">
+                            </div>
+                            <div class="card-custom-content p-4">
+                                <h4>To-do list</h4>
+                                <p> A simple To-Do list website where you can add and delete tasks.</p>
+                                <p></p>
+                                <a href="https://todolist-santiagdc.netlify.app/" class="link-custom">Open Website</a>
+                                <p></p>
+                                <a href="https://codepen.io/desert-dev/pen/MWVNjQQ" class="link-custom">Open Codepen</a>
+                                <p></p>
+                                <a href="https://github.com/santidevhmo/To-Do-List" class="link-custom">Open Github</a>
                             </div>
                         </div>
                     </div>
