Eliminated mail:to href and navbar title

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./assets/css/aos.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    
 </head>
 
 <body data-bs-spy="scroll" data-bs-target=".navbar">
@@ -28,7 +29,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container flex-lg-column">
             <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
-                <span id="navName" class="h3 d-block d-lg-none">Santiago Aguirre</span>
+                <span id="navName" class="h3 d-block d-lg-none"></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,9 +47,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Skills</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#about">Resume</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
@@ -66,11 +64,13 @@
         <section id="home" class="full-height px-lg-5">
 
             <div class="container">
+
                 <div class="row">
                     <div class="col">
                         <p id="introText" data-aos="fade-up">Hi, my name is</p>
                     </div>
                 </div>
+                
                 <div class="row">
                     <div class="col-lg-10">
                         <h1 id="name" class="display-4" data-aos="fade-up">
@@ -86,7 +86,6 @@
                         </p>
                         <div data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
-                            <a href="mailto:santiaguirregdc@gmail.com" class="link-custom">Send me a message at santiaguirregdc@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -238,7 +237,7 @@
                                 <i class="las la-pen-nib"></i>
                             </div>
                             <h5 class="mt-4 mb-2">Mobile & Web UX/UI Design</h5>
-                            <p>2+ years of experience creating user-centric designs for mobile and web applications</p>
+                            <p>2+ years of experience creating user-centric designs for mobile and web applications.</p>
                         </div>
                     </div>
 
@@ -272,7 +271,7 @@
                             <h5 class="mt-4 mb-2">Web Development</h5>
                             <p>Proficient in front-end technologies such as HTML, CSS, and JavaScript to create
                                 interactive and responsive web interfaces using version control systems like Git to
-                                manage and track changes</p>
+                                manage and track changes.</p>
                         </div>
                     </div>
 
@@ -305,29 +304,6 @@
         </section>
         <!-- SERVICES -->
 
-        <!-- ABOUT -->
-        <!-- <section id="about" class="smaller-height px-lg-5">
-            <div class="container">
-
-                <div class="row pb-4" data-aos="fade-up">
-                    <div class="col-lg-8">
-                        <h6 class="text-brand">RESUME</h6>
-                        <h1>My Education & Experience</h1>
-                    </div>
-                </div>
-
-                <div class="row gy-5">
-
-                    <div class="col-lg-6">
-
-                        <div class="form-group col-12 d-grid">
-                            <button type="submit" class="btn btn-brand">Open Resume</button>
-                        </div>
-
-                    </div>
-
-                </div>
-        </section> -->
         <!-- //ABOUT -->
 
         <!-- CONTACT -->
