replaced img links to imgur links

--- a/index.html
+++ b/index.html
@@ -28,9 +28,12 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container flex-lg-column">
+
             <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
                 <span id="navName" class="h3 d-block d-lg-none"></span>
+                <img id="profilePic" src="https://i.imgur.com/e6CCCTv.jpg" class="d-none d-lg-block rounded-circle" alt="">
             </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -79,10 +82,14 @@
                         <h1 id="nameDescr" class="display-4" data-aos="fade-up">
                             I'm a Creative Developer.
                         </h1>
-                        <p id="introDescrText" class="lead mb-4" data-aos="fade-up" data-aos-delay="300">
+                        <!-- <p id="introDescrText" class="lead mb-4" data-aos="fade-up" data-aos-delay="300">
                             Technology passionate developing and designing digital products
                             using web and mobile technologies. Currently open to new
                             opportunities where I can apply my coding and design skills.
+                        </p> -->
+                        <p id="introDescrText" class="lead mb-4" data-aos="fade-up" data-aos-delay="300">
+                            Dedicated to supporting businesses and individuals in cultivating a strong online presence with web and 
+                            iOS products designed to reflect their brand's essence and enhance user satisfaction.
                         </p>
                         <div data-aos="fade-up" data-aos-delay="600">
                             <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
@@ -111,7 +118,7 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
-                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1689889232/RealAboutInstagram/ClimaGPTPoster_ir6kmb.png"
+                                    src="https://i.imgur.com/2OTmz3w.png"
                                     alt="">
                             </div>
                             <div class="card-custom-content p-4">
@@ -128,7 +135,7 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
-                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1689896655/RealAboutInstagram/realAboutInstaPoster_idhkzn.png"
+                                    src="https://i.imgur.com/kvsqJGr.png"
                                     alt="">
                             </div>
                             <div class="card-custom-content p-4">
@@ -144,7 +151,7 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
-                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1689897984/RealAboutInstagram/VAKTestPoster_sefypv.png"
+                                    src="https://i.imgur.com/woLMXTX.png"
                                     alt="">
                             </div>
                             <div class="card-custom-content p-4">
@@ -161,7 +168,7 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
-                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1689899378/RealAboutInstagram/ArtChicagoPoster_jzujkr.png"
+                                    src="https://i.imgur.com/Vc7pBzl.png"
                                     alt="">
                             </div>
                             <div class="card-custom-content p-4">
@@ -177,7 +184,7 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
-                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1690415160/YahooSearchPoster_nkqlrp.png"
+                                    src="https://i.imgur.com/gLen0Xa.png"
                                     alt="">
                             </div>
                             <div class="card-custom-content p-4">
@@ -195,7 +202,7 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
-                                    src="https://res.cloudinary.com/dfmdkmn8y/image/upload/f_auto/q_auto/v1690415170/ToDoListPoster_y451ym.png"
+                                    src="https://i.imgur.com/jxC1VuM.png"
                                     alt="">
                             </div>
                             <div class="card-custom-content p-4">
