Added Whatsapp link and Recinsa project

--- a/index.html
+++ b/index.html
@@ -82,17 +82,12 @@
                         <h1 id="nameDescr" class="display-4" data-aos="fade-up">
                             I'm a Creative Developer.
                         </h1>
-                        <!-- <p id="introDescrText" class="lead mb-4" data-aos="fade-up" data-aos-delay="300">
-                            Technology passionate developing and designing digital products
-                            using web and mobile technologies. Currently open to new
-                            opportunities where I can apply my coding and design skills.
-                        </p> -->
                         <p id="introDescrText" class="lead mb-4" data-aos="fade-up" data-aos-delay="300">
-                            Dedicated to supporting businesses and individuals in cultivating a strong online presence with web and 
-                            iOS products designed to reflect their brand's essence and enhance user satisfaction.
+                            I help businesses and individuals go digital with web and iOS creations that embody 
+                            their brand and elevate user satisfaction.
                         </p>
                         <div data-aos="fade-up" data-aos-delay="600">
-                            <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
+                            <a href="https://api.whatsapp.com/send?phone=5216623670756" class="btn btn-brand me-3">Reach Out on WhatsApp</a>
                         </div>
                     </div>
                 </div>
@@ -118,6 +113,22 @@
                         <div class="card-custom rounded-4 bg-base shadow-effect">
                             <div class="card-custom-image rounded-4">
                                 <img class="rounded-4"
+                                    src="https://i.imgur.com/3ENlm8i.png"
+                                    alt="">
+                            </div>
+                            <div class="card-custom-content p-4">
+                                <h4>Recinsa Website</h4>
+                                <p>Re-designed and developed the website for Recinsa: a waste management company
+                                    located in Hermosillo, Sonora</p>
+                                <a href="https://www.recinsa.com.mx/" class="link-custom">Open website</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6" data-aos="fade-up">
+                        <div class="card-custom rounded-4 bg-base shadow-effect">
+                            <div class="card-custom-image rounded-4">
+                                <img class="rounded-4"
                                     src="https://i.imgur.com/2OTmz3w.png"
                                     alt="">
                             </div>
@@ -127,6 +138,22 @@
                                     ChatGPT.</p>
                                 <a href="https://github.com/santidevhmo/ClimaGPT" class="link-custom">See project and
                                     demo GIF on GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+                        <div class="card-custom rounded-4 bg-base shadow-effect">
+                            <div class="card-custom-image rounded-4">
+                                <img class="rounded-4"
+                                    src="https://i.imgur.com/Vc7pBzl.png"
+                                    alt="">
+                            </div>
+                            <div class="card-custom-content p-4">
+                                <h4>The Art Institute of Chicago Artwork Searcher</h4>
+                                <p>A website that lets you search art available at the Art Institute of Chicago. Made
+                                    using the Art Institute of Chicago API, HTML, CSS, Bootstrap, and JavaScript.</p>
+                                <a href="https://codepen.io/desert-dev/pen/jOxpXPp" class="link-custom">Open Codepen</a>
                             </div>
                         </div>
                     </div>
@@ -160,22 +187,6 @@
                                     Auditory or Kinesthetic.</p>
                                 <a href="https://www.linkedin.com/feed/update/urn:li:activity:6761327666755891200/"
                                     class="link-custom">See LinkedIn post</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
-                        <div class="card-custom rounded-4 bg-base shadow-effect">
-                            <div class="card-custom-image rounded-4">
-                                <img class="rounded-4"
-                                    src="https://i.imgur.com/Vc7pBzl.png"
-                                    alt="">
-                            </div>
-                            <div class="card-custom-content p-4">
-                                <h4>The Art Institute of Chicago Artwork Searcher</h4>
-                                <p>A website that lets you search art available at the Art Institute of Chicago. Made
-                                    using the Art Institute of Chicago API, HTML, CSS, Bootstrap, and JavaScript.</p>
-                                <a href="https://codepen.io/desert-dev/pen/jOxpXPp" class="link-custom">Open Codepen</a>
                             </div>
                         </div>
                     </div>
